--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
          <p>We founded DINO DEVELOPMENT out of a pure passion for building. We are two brothers who work together in sync and is a collaboration we're proud off, we construct roofs extensions and loft conversions to an amazing standard which can be seen in the work we do.
             We like to push boundaries in our field making a project built by DINO DEVELOPMENT stand out from the rest. DINO DEVELOPMENT is a name you can count on and trust to deliver your project from the paper its drawn on to the material its built from.
             Explore the rest of our site to learn more about what we offer, and get in touch with any questions.
-            Follow our Instagram account kakamat_e_vlores to keep you up to date on current live projects.</p>
+            Follow our Instagram account dino_designltd to keep you up to date on current live projects.</p>
          <a href="#services" class="btn">read more</a>
       </div>
 
