--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Complete Responsive Construction Website Design Tutorial</title>
+   <title>Dino Developments LTD</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -25,7 +25,7 @@
 
 <header class="header">
 
-   <a href="#" class="logo">We<span>Build</span></a>
+   <a href="#" class="logo">Dino<span>Developments</span></a>
 
    <nav class="navbar">
       <a href="#home">home</a>
@@ -113,7 +113,7 @@
 
       <div class="swiper-wrapper">
 
-         <section class="swiper-slide slide" style="background: url(images/home-slide-1.jpg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(images/iconDinoBlack.svg) no-repeat;">
             <div class="content">
                <h3>We care about our customers</h3>
                <p>Here at DINO Developments we believe the customer, is at the centre of our business. 
@@ -141,7 +141,7 @@
                   Electrics <br>
                   Plumbing <br>
                   Tiles <br>
-                  Fence & Decking</p>
+                  Fence & Deckin</p>
                <a href="#about" class="btn">get started</a>
             </div>
          </section>
@@ -174,7 +174,7 @@
          <p>We founded DINO DEVELOPMENT out of a pure passion for building. We are two brothers who work together in sync and is a collaboration we're proud off, we construct roofs extensions and loft conversions to an amazing standard which can be seen in the work we do.
             We like to push boundaries in our field making a project built by DINO DEVELOPMENT stand out from the rest. DINO DEVELOPMENT is a name you can count on and trust to deliver your project from the paper its drawn on to the material its built from.
             Explore the rest of our site to learn more about what we offer, and get in touch with any questions.
-            Follow our Instagram account dino_designltd to keep you up to date on current live projects.</p>
+            Follow our Instagram account kakamat_e_vlores to keep you up to date on current live projects.</p>
          <a href="#services" class="btn">read more</a>
       </div>
 
@@ -321,6 +321,12 @@
             <i class="fas fa-plus"></i>
          </div>
          -->
+      </a>
+
+      <a href="images/project-8.jpeg" class="box">
+         <div class="image">
+            <img src="images/project-8.jpeg" alt="">
+         </div>
       </a>
 
    </div>
@@ -517,12 +523,12 @@
       <form>
          <h3>get in touch</h3>
          <i class="fa fa-whatsapp" style="font-size:24px;color:green">
-            <a href="https://api.whatsapp.com/send?phone=447747590578" style="font-size:16px;">447747590578</a>
+            <a href="https://api.whatsapp.com/send?phone=447747590578" style="font-size:16px;">WhatsApp</a>
          </i>
          <h4 style="font-size:16px;">Phone: 7769 835549</h4>
          <h4 style="font-size:16px;">Email: developmentsdino@gmail.com</h4>
          <i class="fa fa-instagram" style="font-size:24px;color:orange">
-            <a href="https://www.instagram.com/dino_designltd/" style="font-size:16px;">dino_designltd</a> 
+            <a href="https://www.instagram.com/dino_designltd/" style="font-size:16px;">Instagram</a> 
          </i>
          
       </form>
