--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <div class="swiper-wrapper">
 
-         <section class="swiper-slide slide" style="background: url(images/iconDinoBlack.svg) no-repeat;">
+         <section class="swiper-slide slide" style="background: url(images/iconDino.svg) no-repeat;">
             <div class="content">
                <h3>We care about our customers</h3>
                <p>Here at DINO Developments we believe the customer, is at the centre of our business. 
@@ -166,7 +166,7 @@
    <div class="row">
 
       <div class="video">
-         <img src="images/iconDino.jpeg"></img>
+         <img src="images/iconDinoBlack.jpeg"></img>
       </div>
 
       <div class="content">
@@ -174,7 +174,7 @@
          <p>We founded DINO DEVELOPMENT out of a pure passion for building. We are two brothers who work together in sync and is a collaboration we're proud off, we construct roofs extensions and loft conversions to an amazing standard which can be seen in the work we do.
             We like to push boundaries in our field making a project built by DINO DEVELOPMENT stand out from the rest. DINO DEVELOPMENT is a name you can count on and trust to deliver your project from the paper its drawn on to the material its built from.
             Explore the rest of our site to learn more about what we offer, and get in touch with any questions.
-            Follow our Instagram account kakamat_e_vlores to keep you up to date on current live projects.</p>
+            </p>
          <a href="#services" class="btn">read more</a>
       </div>
 
