--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
 
    <div class="row">
 
-      <div class="video">
-         <img src="images/iconDinoBlack.jpeg"></img>
-      </div>
+      <img id="iconBlack" src="images/iconDinoBlack.jpeg"></img>
 
       <div class="content">
          <h3>Who we are</h3>
